--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -158,6 +158,10 @@
       <Project>{2d9ce0d7-d884-488c-b8b9-79aff838de0c}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Build\Assets\Shaders\basic.frag" />
+    <None Include="..\Build\Assets\Shaders\basic.vert" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
