--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -159,10 +159,17 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\Build\Assets\Materials\box.mtrl" />
     <None Include="..\Build\Assets\Shaders\basic.frag" />
+    <None Include="..\Build\Assets\Shaders\basic.prog" />
     <None Include="..\Build\Assets\Shaders\basic.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties _1_1_4Build_4Assets_4Shaders_4basic_1prog__JsonSchema="https://docs.renovatebot.com/renovate-schema.json" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
