Texture Map Assignment & Normal Map

--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -89,5 +89,17 @@
     <None Include="..\Build\Assets\Shaders\texture_phong.frag">
       <Filter>Resource Files\Lights</Filter>
     </None>
+    <None Include="..\Build\Assets\Shaders\normal_phong.prog">
+      <Filter>Resource Files\Lights</Filter>
+    </None>
+    <None Include="..\Build\Assets\Shaders\normal_phong.vert">
+      <Filter>Resource Files\Lights</Filter>
+    </None>
+    <None Include="..\Build\Assets\Shaders\normal_phong.frag">
+      <Filter>Resource Files\Lights</Filter>
+    </None>
+    <None Include="..\Build\Assets\Materials\ogre.mtrl">
+      <Filter>Resource Files\Materials</Filter>
+    </None>
   </ItemGroup>
 </Project>
