--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -71,41 +71,71 @@
     <None Include="..\Build\Assets\Materials\ogre.mtrl">
       <Filter>Resource Files\Materials</Filter>
     </None>
-    <None Include="..\Build\Assets\Shaders\basic_lit.frag">
-      <Filter>Resource Files\Shaders</Filter>
+    <None Include="..\Build\Assets\Materials\tiger.mtrl">
+      <Filter>Resource Files\Materials</Filter>
     </None>
-    <None Include="..\Build\Assets\Shaders\basic_lit.prog">
-      <Filter>Resource Files\Shaders</Filter>
+    <None Include="..\Build\Assets\Shaders\Lit\texture.prog">
+      <Filter>Resource Files\Shaders\Lit</Filter>
     </None>
-    <None Include="..\Build\Assets\Shaders\basic_lit.vert">
-      <Filter>Resource Files\Shaders</Filter>
+    <None Include="..\Build\Assets\Shaders\Lit\texture.vert">
+      <Filter>Resource Files\Shaders\Lit</Filter>
     </None>
-    <None Include="..\Build\Assets\Shaders\basic_phong.frag">
-      <Filter>Resource Files\Shaders</Filter>
+    <None Include="..\Build\Assets\Shaders\Lit\texture_normal.frag">
+      <Filter>Resource Files\Shaders\Lit</Filter>
     </None>
-    <None Include="..\Build\Assets\Shaders\basic_phong.prog">
-      <Filter>Resource Files\Shaders</Filter>
+    <None Include="..\Build\Assets\Shaders\Lit\texture_normal.prog">
+      <Filter>Resource Files\Shaders\Lit</Filter>
     </None>
-    <None Include="..\Build\Assets\Shaders\basic_phong.vert">
-      <Filter>Resource Files\Shaders</Filter>
+    <None Include="..\Build\Assets\Shaders\Lit\texture_normal.vert">
+      <Filter>Resource Files\Shaders\Lit</Filter>
     </None>
-    <None Include="..\Build\Assets\Shaders\normal_phong.frag">
-      <Filter>Resource Files\Shaders</Filter>
+    <None Include="..\Build\Assets\Shaders\Lit\texture.frag">
+      <Filter>Resource Files\Shaders\Lit</Filter>
     </None>
-    <None Include="..\Build\Assets\Shaders\normal_phong.prog">
-      <Filter>Resource Files\Shaders</Filter>
+    <None Include="..\Build\Assets\Shaders\Lit\basic_phong.frag">
+      <Filter>Resource Files\Shaders\Lit</Filter>
     </None>
-    <None Include="..\Build\Assets\Shaders\normal_phong.vert">
-      <Filter>Resource Files\Shaders</Filter>
+    <None Include="..\Build\Assets\Shaders\Lit\basic_phong.prog">
+      <Filter>Resource Files\Shaders\Lit</Filter>
     </None>
-    <None Include="..\Build\Assets\Shaders\texture_phong.frag">
-      <Filter>Resource Files\Shaders</Filter>
+    <None Include="..\Build\Assets\Shaders\Lit\basic_phong.vert">
+      <Filter>Resource Files\Shaders\Lit</Filter>
     </None>
-    <None Include="..\Build\Assets\Shaders\texture_phong.prog">
-      <Filter>Resource Files\Shaders</Filter>
+    <None Include="..\Build\Assets\Shaders\Lit\basic_lit.frag">
+      <Filter>Resource Files\Shaders\Lit</Filter>
     </None>
-    <None Include="..\Build\Assets\Shaders\texture_phong.vert">
-      <Filter>Resource Files\Shaders</Filter>
+    <None Include="..\Build\Assets\Shaders\Lit\basic_lit.prog">
+      <Filter>Resource Files\Shaders\Lit</Filter>
+    </None>
+    <None Include="..\Build\Assets\Shaders\Lit\basic_lit.vert">
+      <Filter>Resource Files\Shaders\Lit</Filter>
+    </None>
+    <None Include="..\Build\Assets\Shaders\UnLit\color.vert">
+      <Filter>Resource Files\Shaders\UnLit</Filter>
+    </None>
+    <None Include="..\Build\Assets\Shaders\UnLit\texture.frag">
+      <Filter>Resource Files\Shaders\UnLit</Filter>
+    </None>
+    <None Include="..\Build\Assets\Shaders\UnLit\texture.prog">
+      <Filter>Resource Files\Shaders\UnLit</Filter>
+    </None>
+    <None Include="..\Build\Assets\Shaders\UnLit\texture.vert">
+      <Filter>Resource Files\Shaders\UnLit</Filter>
+    </None>
+    <None Include="..\Build\Assets\Shaders\UnLit\color.frag">
+      <Filter>Resource Files\Shaders\UnLit</Filter>
+    </None>
+    <None Include="..\Build\Assets\Shaders\UnLit\color.prog">
+      <Filter>Resource Files\Shaders\UnLit</Filter>
+    </None>
+    <None Include="..\Build\Assets\Shaders\FX\toon.prog">
+      <Filter>Resource Files\Shaders\FX</Filter>
+    </None>
+    <None Include="..\Build\Assets\Shaders\FX\toon.vert">
+      <Filter>Resource Files\Shaders\FX</Filter>
+    </None>
+    <None Include="..\Build\Assets\Shaders\FX\toon.frag">
+      <Filter>Resource Files\Shaders\FX</Filter>
     </None>
   </ItemGroup>
 </Project>
