--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -163,14 +163,19 @@
     <None Include="..\Build\Assets\Materials\grass.mtrl" />
     <None Include="..\Build\Assets\Materials\multi.mtrl" />
     <None Include="..\Build\Assets\Materials\ogre.mtrl" />
+    <None Include="..\Build\Assets\Materials\skybox.mtrl" />
     <None Include="..\Build\Assets\Materials\spot.mtrl" />
     <None Include="..\Build\Assets\Materials\tiger.mtrl" />
     <None Include="..\Build\Assets\Scenes\basic.scn" />
     <None Include="..\Build\Assets\Scenes\basic_lit.scn" />
+    <None Include="..\Build\Assets\Scenes\cubemap.scn" />
     <None Include="..\Build\Assets\Scenes\texture.scn" />
     <None Include="..\Build\Assets\Shaders\basic.frag" />
     <None Include="..\Build\Assets\Shaders\basic.prog" />
     <None Include="..\Build\Assets\Shaders\basic.vert" />
+    <None Include="..\Build\Assets\Shaders\FX\skybox.frag" />
+    <None Include="..\Build\Assets\Shaders\FX\skybox.prog" />
+    <None Include="..\Build\Assets\Shaders\FX\skybox.vert" />
     <None Include="..\Build\Assets\Shaders\FX\toon.frag" />
     <None Include="..\Build\Assets\Shaders\FX\toon.prog" />
     <None Include="..\Build\Assets\Shaders\FX\toon.vert" />
