--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -137,5 +137,20 @@
     <None Include="..\Build\Assets\Shaders\FX\toon.frag">
       <Filter>Resource Files\Shaders\FX</Filter>
     </None>
+    <None Include="..\Build\Assets\Scenes\cubemap.scn">
+      <Filter>Resource Files\Scene</Filter>
+    </None>
+    <None Include="..\Build\Assets\Materials\skybox.mtrl">
+      <Filter>Resource Files\Materials</Filter>
+    </None>
+    <None Include="..\Build\Assets\Shaders\FX\skybox.prog">
+      <Filter>Resource Files\Shaders\FX</Filter>
+    </None>
+    <None Include="..\Build\Assets\Shaders\FX\skybox.vert">
+      <Filter>Resource Files\Shaders\FX</Filter>
+    </None>
+    <None Include="..\Build\Assets\Shaders\FX\skybox.frag">
+      <Filter>Resource Files\Shaders\FX</Filter>
+    </None>
   </ItemGroup>
 </Project>
