--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -163,6 +163,9 @@
     <None Include="..\Build\Assets\Materials\grass.mtrl" />
     <None Include="..\Build\Assets\Materials\multi.mtrl" />
     <None Include="..\Build\Assets\Materials\ogre.mtrl" />
+    <None Include="..\Build\Assets\Materials\reflection.mtrl" />
+    <None Include="..\Build\Assets\Materials\reflection_refraction.mtrl" />
+    <None Include="..\Build\Assets\Materials\refraction.mtrl" />
     <None Include="..\Build\Assets\Materials\skybox.mtrl" />
     <None Include="..\Build\Assets\Materials\spot.mtrl" />
     <None Include="..\Build\Assets\Materials\tiger.mtrl" />
@@ -173,6 +176,15 @@
     <None Include="..\Build\Assets\Shaders\basic.frag" />
     <None Include="..\Build\Assets\Shaders\basic.prog" />
     <None Include="..\Build\Assets\Shaders\basic.vert" />
+    <None Include="..\Build\Assets\Shaders\FX\reflect.frag" />
+    <None Include="..\Build\Assets\Shaders\FX\reflect.prog" />
+    <None Include="..\Build\Assets\Shaders\FX\reflect.vert" />
+    <None Include="..\Build\Assets\Shaders\FX\reflection_refraction.frag" />
+    <None Include="..\Build\Assets\Shaders\FX\reflection_refraction.prog" />
+    <None Include="..\Build\Assets\Shaders\FX\reflection_refraction.vert" />
+    <None Include="..\Build\Assets\Shaders\FX\refraction.frag" />
+    <None Include="..\Build\Assets\Shaders\FX\refraction.prog" />
+    <None Include="..\Build\Assets\Shaders\FX\refraction.vert" />
     <None Include="..\Build\Assets\Shaders\FX\skybox.frag" />
     <None Include="..\Build\Assets\Shaders\FX\skybox.prog" />
     <None Include="..\Build\Assets\Shaders\FX\skybox.vert" />
