--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -188,5 +188,11 @@
     <None Include="..\Build\Assets\Materials\reflection_refraction.mtrl">
       <Filter>Resource Files\Materials</Filter>
     </None>
+    <None Include="..\Build\Assets\Scenes\rtt.scn">
+      <Filter>Resource Files\Scene</Filter>
+    </None>
+    <None Include="..\Build\Assets\Materials\rtt.mtrl">
+      <Filter>Resource Files\Materials</Filter>
+    </None>
   </ItemGroup>
 </Project>
