--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -163,6 +163,7 @@
     <None Include="..\Build\Assets\Materials\grass.mtrl" />
     <None Include="..\Build\Assets\Materials\multi.mtrl" />
     <None Include="..\Build\Assets\Materials\ogre.mtrl" />
+    <None Include="..\Build\Assets\Materials\postprocess.mtrl" />
     <None Include="..\Build\Assets\Materials\reflection.mtrl" />
     <None Include="..\Build\Assets\Materials\reflection_refraction.mtrl" />
     <None Include="..\Build\Assets\Materials\refraction.mtrl" />
@@ -205,6 +206,9 @@
     <None Include="..\Build\Assets\Shaders\Lit\texture_normal.frag" />
     <None Include="..\Build\Assets\Shaders\Lit\texture_normal.prog" />
     <None Include="..\Build\Assets\Shaders\Lit\texture_normal.vert" />
+    <None Include="..\Build\Assets\Shaders\PostProcess\postprocess.frag" />
+    <None Include="..\Build\Assets\Shaders\PostProcess\postprocess.prog" />
+    <None Include="..\Build\Assets\Shaders\PostProcess\postprocess.vert" />
     <None Include="..\Build\Assets\Shaders\UnLit\color.frag" />
     <None Include="..\Build\Assets\Shaders\UnLit\color.prog" />
     <None Include="..\Build\Assets\Shaders\UnLit\color.vert" />
