--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -31,6 +31,9 @@
     <Filter Include="Resource Files\Shaders\UnLit">
       <UniqueIdentifier>{43792e13-368b-465b-b605-56fac823b13a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Resource Files\Shaders\PostProcess">
+      <UniqueIdentifier>{f4cdcdaa-09cc-402d-9a6d-0bbb23f6e87f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -192,6 +195,18 @@
       <Filter>Resource Files\Scene</Filter>
     </None>
     <None Include="..\Build\Assets\Materials\rtt.mtrl">
+      <Filter>Resource Files\Materials</Filter>
+    </None>
+    <None Include="..\Build\Assets\Shaders\PostProcess\postprocess.prog">
+      <Filter>Resource Files\Shaders\PostProcess</Filter>
+    </None>
+    <None Include="..\Build\Assets\Shaders\PostProcess\postprocess.vert">
+      <Filter>Resource Files\Shaders\PostProcess</Filter>
+    </None>
+    <None Include="..\Build\Assets\Shaders\PostProcess\postprocess.frag">
+      <Filter>Resource Files\Shaders\PostProcess</Filter>
+    </None>
+    <None Include="..\Build\Assets\Materials\postprocess.mtrl">
       <Filter>Resource Files\Materials</Filter>
     </None>
   </ItemGroup>
